[project]
name = "langgraph-v1-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "langchain>=1.0.2",
    "langchain-anthropic>=1.0.0",
    "langchain-openai>=1.0.1",
    "langchain-tavily>=0.2.12",
    "langchain-teddynote>=0.5.3",
    "langgraph>=1.0.1",
    "notebook>=7.4.7",
    "python-dotenv>=1.2.1",
]
